www/css/content.css
/* ... */
	
	.temporary-hero .inner .next-caption {
		position: relative;
		width: 100%;
  		height: 100%;
		display: flex;
		align-items: flex-end;
	}
	
	.temporary-hero .inner .next-caption .next-hero-title {
		font-size: calc(1rem + 6vw);
		line-height: calc(1rem + 7vw);
		letter-spacing: -0.2vw;
	}
	

/*--------------------------------------------------
	General Width and Padding for Hero, Content, Page and Project Nav
---------------------------------------------------*/
	
	.content-max-width {
		box-sizing:border-box;
		padding-left:80px;
		padding-right:80px;
		max-width:1320px;
	}
	
	.content-full-width {
		box-sizing:border-box;
		padding-left:80px;
		padding-right:80px;
		max-width:100%;
	}

	
/*--------------------------------------------------
	Responsive
---------------------------------------------------*/	
@media only screen and (max-width: 1537px) {
	
	#hero.has-image #hero-caption {
		padding-top:240px;
		padding-bottom: 130px;
	}
	
	.hero-below-caption #next-project-caption {
		padding-top:240px;
		padding-bottom: 130px;
	}
	
	.hero-below-caption .temporary-hero .outer {
		padding-top:240px;
		padding-bottom: 130px;
	}
	
}



@media only screen and (max-width: 1466px) {
	
	#hero-caption {
		padding-top: 100px;
		padding-bottom: 100px;
	}
	
	.page-nav-caption {
		padding-top: 100px;
		height: calc(100vh - 100px);
	}
	
	.hero-subtitle {
  		bottom: 40px;
	}
	
	.hero-subtitle, .next-hero-subtitle {
		margin-top:40px;
	}
	
	#hero-footer {
  		padding: 20px 60px;
	}
	
	.content-max-width, .content-full-width {
		padding-left:60px;
		padding-right:60px;
	}
	
}

@media only screen and (max-width: 1024px) {
	
	#hero-caption.hero-full-caption {
		height:100vh;
		height:100dvh;
	}
	
	#hero.has-image #hero-caption .inner, #project-nav .next-caption, .temporary-hero .inner .next-caption {
  		display: block;
	}
	
	.hero-subtitle, .next-hero-subtitle {
		font-size: 22px;
		line-height: 30px;
		margin-top:30px;
	}
	
	#hero.has-image .hero-title {
		max-width:100%;
	}
	
	#hero.has-image .hero-subtitle {
		font-size: 22px;
		line-height: 30px;
		text-align:left;
		margin-top:40px;
		max-width:100%;
	}
	
	#project-nav .next-hero-title {
		margin-bottom:0px;
		max-width:100%;
	}
	
	#project-nav .next-hero-subtitle, .temporary-hero .next-hero-subtitle {
  		justify-content: flex-start;
		text-align:left;
		margin-top:20px;
		max-width:100%;
	}
	
	#hero-footer {
  		padding: 20px 40px;
	}
	
	.hero-column .col-img-wrapper.small-img {
  		width: 18%;
	}
	
	.hero-column .col-img-wrapper.large-img {
  		width: 28%;
	}
	
	.content-max-width, .content-full-width {
		padding-left:40px;
		padding-right:40px;
	}
	
}

@media only screen and (max-width: 767px) {		
	
	#hero-caption {
		padding-top: 80px;
		padding-bottom: 80px;
	}
	
	.page-nav-caption {
		padding-top: 80px;
		height: calc(100vh - 80px);
	}
	
	.hero-title::before {
		left: 0;
		top: -65px;
	}
	
	.caption-animated .hero-title::before {
		opacity: 0.6;
		left: 0;
		top: -50px;
		width: 100%;
	}

	.hero-title::after {
		right: 0;
		top: auto;
		bottom: -50px;
	}

	.caption-animated .hero-title::after {
		opacity: 0.6;
		right: 0;
		bottom: -50px;
		width: 100%;
		top: auto;
	}
	
	.hero-subtitle, .next-hero-subtitle {
		font-size: 20px;
		line-height: 28px;
		margin-top:20px;
	}

	#hero-caption .inner img {
		display: block;
		margin-top: -20px;
	}

	#hero-caption .inner .hero-title {
		margin-top: 70px;
	}

	.next-hero-title::before {
		opacity: 0.6;
		left: 0;
		top: -20px;
		width: 100%;
	}
	
	.next-hero-title::after {
		opacity: 0.6;
		right: 0;
		bottom: -25px;
		width: 100%;
		top: auto;
	}
	
	.show-loader .next-hero-title::before {
		left: 0;
		top: -45px;
		opacity:0;
	}
	
	.show-loader .next-hero-title::after {
		right: 0;
		top: auto;
		bottom: -50px;
		opacity:0;
	}
	
	#hero.has-image .hero-subtitle {
		font-size: 20px;
		line-height: 28px;
	}
	
	#project-nav .next-hero-title {
		margin-bottom:48px;
	}
	
	#hero-footer {
  		padding: 20px 30px;
	}
	
	#hero-footer .button-text {
		display:none;
	}
	
	#info-text {
		width:60px;
		height:60px;
	}
	
	#info-text::after {
        font: var(--fa-font-solid);
        content: "\f063";
        font-size: 16px;
        width: 100%;
        height: 100%;
        line-height: 60px;
        text-align: right;
        position: absolute;
        left: 0;
        top: 0;
        color: currentColor;
    }
	
	#info-text span {
		display:none;
	}
	
	.hero-column .col-img-wrapper.small-img {
		width: 28%;
	}
	
	.hero-column .col-img-wrapper.large-img {
		width: 38%;
	}
	
	.content-max-width, .content-full-width {
		padding-left:30px;
		padding-right:30px;
	}
	
}

@media only screen and (max-width: 479px) {
	
	#hero.has-image .hero-title {
  		margin-bottom: 10px;
	}
	
	.hero-subtitle, .next-hero-subtitle {
		font-size: 18px;
		line-height: 26px;
	}
	
	.hero-subtitle {
    	bottom: 30px;
	}
	
	#hero.has-image .hero-subtitle {
		font-size: 18px;
		line-height: 26px;
	}
	
	#project-nav .next-hero-title {
		margin-bottom:36px;
	}
	
	#hero-footer {
  		padding: 10px 20px;
	}
	
	#hero #hero-footer .button-text {
		display:none;
	}
	
	.hero-column .col-img-wrapper.small-img {
		width: 38%;
	}
	
	.hero-column .col-img-wrapper.large-img {
		width: 48%;
	}
		
	.content-max-width, .content-full-width {
		padding-left:20px;
		padding-right:20px;
	}
		
}			
	

